Make playlist media format configurable